working on video poster visualize

--- a/VideoHLS/Views/Home/Index.cshtml
+++ b/VideoHLS/Views/Home/Index.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Home Page";
 }
 
-<video id="player" allowfullscreen
-       allowtransparency controls></video>
+<video id="player" preload="none" allowfullscreen
+       allowtransparency controls data-poster="/image/thumbnail.jpg"></video>
